swap standalone version with demo: demo will continue to be committed to the repo but standalone is published only to npm

--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "homepage": "https://github.com/Delete-Agency/google-maps",
   "scripts": {
     "build": "babel src -d lib",
-    "standalone": "webpack",
-    "standalone:watch": "webpack --watch",
+    "standalone": "webpack --config webpack.standalone.config.js",
+    "demo": "webpack --config webpack.demo.config.js",
+    "demo:watch": "webpack --config webpack.demo.config.js --watch",
     "test": "echo \"No test specified\"",
     "prepublish": "npm run build && npm run standalone"
   },
